--- a/include/coap3/coap.h.in
+++ b/include/coap3/coap.h.in
@@ -56,6 +56,7 @@ extern "C" {
 #include "coap@LIBCOAP_API_VERSION@/coap_net.h"
 #include "coap@LIBCOAP_API_VERSION@/coap_option.h"
 #include "coap@LIBCOAP_API_VERSION@/coap_oscore.h"
+#include "coap@LIBCOAP_API_VERSION@/coap_oscore_ng.h"
 #include "coap@LIBCOAP_API_VERSION@/coap_pdu.h"
 #include "coap@LIBCOAP_API_VERSION@/coap_prng.h"
 #include "coap@LIBCOAP_API_VERSION@/coap_resource.h"
