--- a/configure.ac
+++ b/configure.ac
@@ -699,6 +699,20 @@ AC_SUBST(LIBCOAP_DTLS_LIB_EXTENSION_NAME)
 AC_SUBST([DOLLAR_SIGN],[$])
 
 # configure options
+# __OSCORE_NG__
+# Support for Object Security with improvements.
+AC_ARG_ENABLE([oscore-ng],
+              [AS_HELP_STRING([--enable-oscore-ng],
+                              [Enable building with OSCORE-NG support [default=no]])],
+              [build_oscore_ng="$enableval"],
+              [build_oscore_ng="no"])
+
+if test "x$build_oscore_ng" = "xyes"; then
+    AC_DEFINE(COAP_OSCORE_NG_SUPPORT, [1], [Define to build with OSCORE-NG support])
+fi
+AM_CONDITIONAL(COAP_OSCORE_NG_SUPPORT, [test "x$build_oscore_ng" = "xyes"])
+
+# configure options
 # __OSCORE__
 # Support for Object Security according to RFC 8613.
 AC_ARG_ENABLE([oscore],
@@ -1281,6 +1295,11 @@ if test "x$have_epoll" = "xyes"; then
     AC_MSG_RESULT([      build using epoll              : "$with_epoll"])
 fi
 AC_MSG_RESULT([      enable small stack size        : "$enable_small_stack"])
+if test "x$build_oscore_ng" = "xyes"; then
+    AC_MSG_RESULT([      build OSCORE-NG support        : "yes"])
+else
+    AC_MSG_RESULT([      build OSCORE-NG support        : "no"])
+fi
 if test "x$build_async" != "xno"; then
     AC_MSG_RESULT([      enable separate responses      : "yes"])
 else
