--- a/cmake_coap_defines.h.in
+++ b/cmake_coap_defines.h.in
@@ -47,6 +47,9 @@
 /* Define to 1 if the library has OSCORE support. */
 #cmakedefine COAP_OSCORE_SUPPORT @COAP_OSCORE_SUPPORT@
 
+/* Define to 1 if the library has OSCORE-NG support. */
+#cmakedefine COAP_OSCORE_NG_SUPPORT @COAP_OSCORE_NG_SUPPORT@
+
 /* Define to 1 if the library has proxy support. */
 #cmakedefine COAP_PROXY_SUPPORT @COAP_PROXY_SUPPORT@
 
