--- a/src/oscore-ng/Makefile.oscore-ng
+++ b/src/oscore-ng/Makefile.oscore-ng
@@ -1,4 +1,6 @@
 MODULES_SOURCES_EXCLUDES += oscore_ng_aes_128.c
 MODULES_SOURCES_EXCLUDES += oscore_ng_ccm_star.c
+MODULES_SOURCES_EXCLUDES += oscore_ng_ecc_curve.c
+MODULES_SOURCES_EXCLUDES += oscore_ng_ecc.c
 MODULES_SOURCES_EXCLUDES += oscore_ng_list.c
 MODULES_SOURCES_EXCLUDES += oscore_ng_sha_256.c
